<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clases.UbicacionFragment">


    <LinearLayout
        android:id="@+id/layoutUbicacion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloUbicacion"
            android:textColor="@color/white"
            android:textSize="24dp"/>

        <RelativeLayout
            android:id="@+id/containerUbicacionOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtMapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:text="@string/mapaUbicacion"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/txtLista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:text="@string/listaUbicacion"
                android:textColor="@color/white"
                android:textSize="24dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutUbicacionMapa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagenMapa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/mapa_ubicacion" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>