<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clases.OfertaFragment">

    <RelativeLayout
        android:id="@+id/containerOferta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/layoutOfertaEncabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtGasolinera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloOferta"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/icon_ubicacion"
                android:textSize="20dp"
                android:drawableTint="@color/white"/>

            <ImageView
                android:id="@+id/imagenIconUNO"
                android:layout_width="123dp"
                android:layout_height="132dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/uno_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutOfertaTextoBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/layoutOfertaEncabezado"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtObten20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/obten20"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btnRegistraCupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_alignTop="@+id/txtObten20"
                android:layout_marginTop="-70dp"
                android:textSize="10dp"
                android:textColor="@color/black"
                android:text="@string/registraCupon" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutMasOferta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layoutOfertaEncabezado"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMasOferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginStart="133dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="130dp"
                android:text="@string/masOferta"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <View
                android:id="@+id/lineaSeparadora"
                android:layout_width="295dp"
                android:layout_height="2dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginStart="39dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="37dp"
                android:layout_marginBottom="364dp"
                android:background="@android:color/black" />

            <ImageView
                android:id="@+id/imagenIconPuma"
                android:layout_width="111dp"
                android:layout_height="117dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginStart="62dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="153dp"
                android:src="@drawable/puma_icon" />

            <ImageView
                android:id="@+id/imagenIconTexaco"
                android:layout_width="111dp"
                android:layout_height="117dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="49dp"
                android:layout_marginBottom="158dp"
                android:src="@drawable/texaco_icon" />
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>